src/snapshots/alma__parser__tests__test_module_parser__import-4.snap
---
source: src/parser.rs
assertion_line: 2608
expression: "parse(\"\\\nmodule Test\n\nimport Banana as B\n\nimport Phone exposing (raffi)\n\nimport Apple as A exposing (orange)\n\")"
---
Input:

module Test

import Banana as B

import Phone exposing (raffi)

import Apple as A exposing (orange)


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Index(
                        1,
                    ),
                    end: Index(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [
            Node {
                start: Index(
                    2,
                ),
                end: Index(
                    5,
                ),
                value: Import_ {
                    module_name: ModuleName {
                        parts: [
                            Node {
                                start: Index(
                                    3,
                                ),
                                end: Index(
                                    3,
                                ),
                                value: CapitalizedIdentifier_ {
                                    name: SymbolU32 {
                                        value: 2,
                                    },
                                },
                            },
                        ],
                        full_name: SymbolU32 {
                            value: 2,
                        },
                    },
                    alias: Some(
                        Node {
                            start: Index(
                                5,
                            ),
                            end: Index(
                                5,
                            ),
                            value: CapitalizedIdentifier_ {
                                name: SymbolU32 {
                                    value: 3,
                                },
                            },
                        },
                    ),
                    exposing: [],
                },
            },
            Node {
                start: Index(
                    6,
                ),
                end: Index(
                    11,
                ),
                value: Import_ {
                    module_name: ModuleName {
                        parts: [
                            Node {
                                start: Index(
                                    7,
                                ),
                                end: Index(
                                    7,
                                ),
                                value: CapitalizedIdentifier_ {
                                    name: SymbolU32 {
                                        value: 4,
                                    },
                                },
                            },
                        ],
                        full_name: SymbolU32 {
                            value: 4,
                        },
                    },
                    alias: None,
                    exposing: [
                        Node {
                            start: Index(
                                10,
                            ),
                            end: Index(
                                10,
                            ),
                            value: Identifier(
                                Node {
                                    start: Index(
                                        10,
                                    ),
                                    end: Index(
                                        10,
                                    ),
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 5,
                                        },
                                    },
                                },
                            ),
                        },
                    ],
                },
            },
            Node {
                start: Index(
                    12,
                ),
                end: Index(
                    19,
                ),
                value: Import_ {
                    module_name: ModuleName {
                        parts: [
                            Node {
                                start: Index(
                                    13,
                                ),
                                end: Index(
                                    13,
                                ),
                                value: CapitalizedIdentifier_ {
                                    name: SymbolU32 {
                                        value: 6,
                                    },
                                },
                            },
                        ],
                        full_name: SymbolU32 {
                            value: 6,
                        },
                    },
                    alias: Some(
                        Node {
                            start: Index(
                                15,
                            ),
                            end: Index(
                                15,
                            ),
                            value: CapitalizedIdentifier_ {
                                name: SymbolU32 {
                                    value: 7,
                                },
                            },
                        },
                    ),
                    exposing: [
                        Node {
                            start: Index(
                                18,
                            ),
                            end: Index(
                                18,
                            ),
                            value: Identifier(
                                Node {
                                    start: Index(
                                        18,
                                    ),
                                    end: Index(
                                        18,
                                    ),
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 8,
                                        },
                                    },
                                },
                            ),
                        },
                    ],
                },
            },
        ],
        definitions: [],
        type_definitions: [],
    },
    [],
)
