src/snapshots/alma__parser__tests__test_module_parser__many fields.snap
---
source: src/parser.rs
assertion_line: 2838
expression: "parse(\"\nmodule Test\n\ntype Fruit = { name : String , banana: Phone }\n\")"
---
Input:


module Test

type Fruit = { name : String , banana: Phone }


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Idx(
                        1,
                    ),
                    end: Idx(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [
            Node {
                start: Idx(
                    2,
                ),
                end: Idx(
                    13,
                ),
                value: TypeDefinition_ {
                    name: Node {
                        start: Idx(
                            3,
                        ),
                        end: Idx(
                            3,
                        ),
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    vars: [],
                    typ: Record(
                        Record(
                            Node {
                                start: Idx(
                                    5,
                                ),
                                end: Idx(
                                    13,
                                ),
                                value: Record_ {
                                    fields: [
                                        (
                                            Node {
                                                start: Idx(
                                                    6,
                                                ),
                                                end: Idx(
                                                    6,
                                                ),
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 3,
                                                    },
                                                },
                                            },
                                            App(
                                                Node {
                                                    start: Idx(
                                                        8,
                                                    ),
                                                    end: Idx(
                                                        8,
                                                    ),
                                                    value: Constructor_ {
                                                        name: Node {
                                                            start: Idx(
                                                                8,
                                                            ),
                                                            end: Idx(
                                                                8,
                                                            ),
                                                            value: CapitalizedIdentifier_ {
                                                                name: SymbolU32 {
                                                                    value: 4,
                                                                },
                                                            },
                                                        },
                                                        params: [],
                                                    },
                                                },
                                            ),
                                        ),
                                        (
                                            Node {
                                                start: Idx(
                                                    10,
                                                ),
                                                end: Idx(
                                                    10,
                                                ),
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 5,
                                                    },
                                                },
                                            },
                                            App(
                                                Node {
                                                    start: Idx(
                                                        12,
                                                    ),
                                                    end: Idx(
                                                        12,
                                                    ),
                                                    value: Constructor_ {
                                                        name: Node {
                                                            start: Idx(
                                                                12,
                                                            ),
                                                            end: Idx(
                                                                12,
                                                            ),
                                                            value: CapitalizedIdentifier_ {
                                                                name: SymbolU32 {
                                                                    value: 6,
                                                                },
                                                            },
                                                        },
                                                        params: [],
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                },
                            },
                        ),
                    ),
                },
            },
        ],
    },
    [],
)
