src/snapshots/alma__parser__tests__test_module_parser__missing value on field.snap
---
source: src/parser.rs
assertion_line: 3025
expression: "parse(\"\nmodule Test\n\ntype Fruit = { name }\n\")"
---
Input:


module Test

type Fruit = { name }


Result:

Test.alma:4:20

Expected `|` between the type variable and the fields of the record (like this `{ a | field : Type }`), but instead found: `}`

  2│  module Test
  3│  
  4│  type Fruit = { name }
   │                      ↑

Error {
    kind: InvalidRecordTypeFieldSeparatorOrExtensibleRecordSeparator,
    token: Token {
        kind: RightBrace,
        indent: 0,
        start: 34,
        end: 35,
        line: 4,
        column: 20,
    },
}
