src/snapshots/alma__parser__tests__test_module_parser__module_name-2.snap
---
source: src/parser.rs
assertion_line: 2626
expression: "parse(\"\\\nmodule Test\n\nmodule i_am_not_PascalCase\n    test = 1\n\")"
---
Input:

module Test

module i_am_not_PascalCase
    test = 1


Result:

:3:7

Invalid module name 'i_am_not_PascalCase'.

Module names have to be `PascalCase` and also not have extraneous characters, because they need to match the file name in the file system.

  1│  module Test
  2│  
  3│  module i_am_not_PascalCase
   │         ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
  4│      test = 1

Error {
    kind: InvalidModuleNameSegment,
    token: Token {
        kind: Identifier(
            SymbolU32 {
                value: 2,
            },
        ),
        indent: 0,
        start: 20,
        end: 39,
        line: 3,
        column: 7,
    },
}
