src/snapshots/alma__parser__tests__test_module_parser__module_name-3.snap
---
source: src/parser.rs
assertion_line: 2670
expression: "parse(\"\\\nmodule Test\n\nmodule Test.Test2\n\n    module i_am_not_PascalCase\n        test = 1\n\")"

---
Input:

module Test

module Test.Test2

    module i_am_not_PascalCase
        test = 1


Result:

:5:11

Invalid module name 'i_am_not_PascalCase'.

Module names have to be `PascalCase` and also not have extraneous characters, because they need to match the file name in the file system.

  3│  module Test.Test2
  4│  
  5│      module i_am_not_PascalCase
   │             ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
  6│          test = 1

Error {
    kind: InvalidModuleNameSegment,
    token: Token {
        kind: Identifier,
        position: 43,
        end_position: 62,
        lexeme: "i_am_not_PascalCase",
        line: 5,
        column: 11,
        indent: 4,
    },
}
