src/snapshots/alma__parser__tests__test_module_parser__module_name_validation-2.snap
---
source: src/parser.rs
assertion_line: 2673
expression: "parse(\"module Test.Te_st\")"
---
Input:

module Test.Te_st

Result:

:1:12

Invalid module name 'Te_st'.

Module names have to be `PascalCase` and also not have extraneous characters, because they need to match the file name in the file system.

  1│  module Test.Te_st
   │              ↑↑↑↑↑

Error {
    kind: InvalidModuleNameSegment,
    token: Token {
        kind: CapitalizedIdentifier(
            SymbolU32 {
                value: 2,
            },
        ),
        indent: 0,
        start: 12,
        end: 17,
        line: 1,
        column: 12,
    },
}
