src/snapshots/alma__parser__tests__test_module_parser__module_name_validation-4.snap
---
source: src/parser.rs
assertion_line: 2890
expression: "parse(\"\nmodule Test.Something\n\nmodule Test.Banana\n\")"
---
Input:


module Test.Something

module Test.Banana


Result:

:4:0

The sub-module name 'Test.Banana' differs from the name of the parent module.

Module names need to match their parent module path names and specify their name at the end.

Like this:

    module Admin
        module Admin.User
            module Admin.User.Id



  2│  module Test.Something
  3│  
  4│  module Test.Banana
   │  ↑↑↑↑↑↑

Error {
    kind: SubmoduleAndParentModuleNameMismatch {
        submodule: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        3,
                    ),
                },
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 3,
                    },
                    span: Index(
                        4,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 11,
            },
        },
    },
    token: Token {
        kind: Module,
        indent: 0,
        start: 24,
        end: 30,
        line: 4,
        column: 0,
    },
}
