src/snapshots/alma__parser__tests__test_module_parser__module_name_validation.snap
---
source: src/parser.rs
assertion_line: 2672
expression: "parse(\"module Te_st\")"
---
Input:

module Te_st

Result:

:1:7

Invalid module name 'Te_st'.

Module names have to be `PascalCase` and also not have extraneous characters, because they need to match the file name in the file system.

  1│  module Te_st
   │         ↑↑↑↑↑

Error {
    kind: InvalidModuleNameSegment,
    token: Token {
        kind: CapitalizedIdentifier(
            SymbolU32 {
                value: 1,
            },
        ),
        indent: 0,
        start: 7,
        end: 12,
        line: 1,
        column: 7,
    },
}
